# semiproctex

./: PPTBF_file_format.txt  README.md  semiProcTex_file_format.txt
PPTBF_Structures_Src/: CMakeLists.txt  ReadMe.md  ReadMe.txt  cmake_generateProjects.bat  cmake_generateProjects.sh  replicate_pptbfResults_matchingStructures.bat  tool_launchViewer.bat  tool_launchViewer_DEBUG.bat  visualStudio_openSolution.bat
PPTBF_Structures_Src/PtGraphics/: CMakeLists.txt  PtCamera.cpp  PtCamera.h  PtGraphicsConfig.h  PtGraphicsHistogram.cpp  PtGraphicsHistogram.h  PtGraphicsHistogram.hpp  PtGraphicsLibrary.cpp  PtGraphicsLibrary.h  PtGraphicsMeshManager.cpp  PtGraphicsMeshManager.h  PtGraphicsMeshManager.hpp  PtGraphicsPPTBF.cpp  PtGraphicsPPTBF.h  PtGraphicsPPTBF.hpp  PtShaderProgram.cpp  PtShaderProgram.h  PtShaderProgram.hpp
PPTBF_Structures_Src/PtModel/: CMakeLists.txt  PtConfig.h  PtEnvironment.cpp  PtEnvironment.h  PtFeature.cpp  PtFeature.h  PtFeature.hpp  PtImageHelper.cpp  PtImageHelper.h  PtModelConfig.h  PtModelLibrary.cpp  PtModelLibrary.h  PtNoise.cpp  PtNoise.h  PtNoise.hpp  PtPPTBF.cpp  PtPPTBF.h  PtPPTBF.hpp  PtPPTBFLoader.cpp  PtPPTBFLoader.h  PtWindow.cpp  PtWindow.h
PPTBF_Structures_Src/Tools/: CMakeLists.txt
PPTBF_Structures_Src/Tools/PtBDDGenerator/: CMakeLists.txt  PtApplication.cpp  PtApplication.h  PtViewer.cpp  PtViewer.h  PtViewerConfig.h  main.cpp
PPTBF_Structures_Src/Tools/PtBDDParameterSpaceSampler/: CMakeLists.txt  PtApplication.cpp  PtApplication.h  PtViewer.cpp  PtViewer.h  PtViewerConfig.cpp  PtViewerConfig.h  imgui_impl_glfw_gl3.cpp  main.cpp
PPTBF_Structures_Src/Tools/PtViewer/: CMakeLists.txt  PtApplication.cpp  PtApplication.h  PtViewer.cpp  PtViewer.h  PtViewerConfig.cpp  imgui_impl_glfw_gl3.cpp  main.cpp
Replicability/: ReadMe.md  ReadMe.txt
Semiproc_synthesis_Src/: CMakeLists.txt  ReadMe.txt  tool_launchBasicSynthesizer.bat  visualStudio_openSolution.bat
Semiproc_synthesis_Src/Data/Textures/cells/: 20181215_153153_scrop_semiproctex_pptbf_params.txt  20181215_153153_scrop_synthesis_params.txt  20181215_153153_seg_scrop_pptbf_params.txt  20181215_153153_synthesis_params.txt
Semiproc_synthesis_Src/SptSynthesizer/: CMakeLists.txt  SptBasicHviewInterface.cpp  SptBasicHviewInterface.h  SptBasicSynthesizer.cpp  SptBasicSynthesizer.h  SptHviewInterface.cpp  SptHviewInterface.h  SptImageHelper.cpp  SptImageHelper.h  SptSynthesizer.cpp  SptSynthesizer.h  main.cpp
Semiproc_synthesis_Src/Tools/LabelMapGenerator/: Spt_generateLabelMap.py
